fix text overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,7 @@ a {
     -webkit-transform: translateZ(0) scale(1.0, 1.0);
     transform: translateZ(0);
 }
+
+.status-text a {
+	word-break: break-all;
+}
